--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Sirui Han"
-description              : "Assistant Professor"
+description              : "Assistant Professor & RGC-Fulbright Research Scholar"
 repository               : "RayeRen/acad-homepage.github.io"
 google_scholar_stats_use_cdn : true
 
